--- a/index.html
+++ b/index.html
@@ -879,22 +879,42 @@
   <code class="block">
     ; Signature : Number Image -> Image
   </code>
+  <p>
+    Now let's come up with some examples.
+    Something to keep in mind is that our function returns an image of a clock face with a number on it.
+    This new image could now be used as the face input for the function when we want to place the number 2.
+    Can you see how this might be used to fill up our clock face with all the numbers?
+    You can see the code we used here.
+  </p>
   <code class="block">
     ; Examples :
-    (check-expect (place-turn 12 clock-face) <img src="images/place-turn.png"/>)
+    (check-expect (place-turn 12 clock-face) <img src="images/place-turn.png"/>)   <!-- Should start with 1, 2, 3... otherwise clock is backwards -->
   </code>
+  <p>
+    Let's see if we can get our test to run.
+    Make sure the inputs match the signature.
+  </p>
   <code class="block">
     ; Stub :
-    (define (place-turn str face) 0)
+    (define (place-turn str face) 0)    <!--Recommend change function name to place-num-and-rotate - DB -->
   </code>
+  <p>
+  Great!
+  We got our examples to run.
+  We're almost there.
+</p>
   <code class="block">
     ; Template :
-    (define (place-turn str)
+    (define (place-turn str face)
       (rotate ...
         (overlay/align ... ... ... ...)
       )
     )
   </code>
+ <p>
+ At this point, we're ready to code our function.
+ Do you see how the function <code>digit</code> has helped us keep our code clean?
+ </p>
   <code class="block">
     ; Code :
     (define (place-turn str face)
@@ -907,17 +927,54 @@
       )
     )
   </code>
-
+   <p>
+     Very well done!
+     Our functions our coming together nicely, and we are just a few steps away from
+     creating a fully numbered clock face.
+     At this point, we have a function that takes a number and converts it into an <code>Image</code>.
+     We have another function that takes a number and a clock face, places the number
+     on the top of the clock face, and returns the clock face rotated 30 degrees to make room for
+     the next number.
+   </p>
+   <p>
+     Now we just need a function that places each number 1 through 12 and returns
+     an <code>Image</code> of the fully-numbered clock face.
+     We have already seen how, after we place the number 1 on the clock face,
+     we can feed the new clock face directly into our function again to place the number 2.
+     Our new function will need to go through and place each number 1 through 12 in a similar way.
+   </p>
+   <p>
+     You may recall that there is a certain equivalence between images and functions that
+     return the data type <code>Image</code>.
+     If a function takes and <code>Image</code> as an argument, we can cut and paste the actual image
+     graphic into the code, or we can input a function that returns an <code>Image</code>.
+    We'll see how this feature could prove to be very useful.
+   </p>
+   <p>
+     The purpose of our last function will be to take a clock face and populate it with numbers.
+   </p>
   <code class="block">
-    ; Purpose : Given a series of numbers, return an image of the numbers placed on a clock face.
+    ; Purpose : Given a clock face image, return an image of the numbers 1-12 placed on the clock face.
   </code>
+  <p>
+    This almost seems too simple! The only input is the image of the clock face.
+    You might be tempted to think that we need to include a list of the numbers we want on the clock face.
+    But we already know which numbers we want (1-12).
+    There really is no additional input that we need to include besides the clock face itself.
+  </p>
   <code class="block">
-    ; Signature : String -> Image
+    ; Signature : Image -> Image
   </code>
+  <p>
+   The signature reflects this simplicity nicely.
+  </p>
   <code class="block">
     ; Examples :
     (check-expect (place-numbers clock-face) <img src="images/place-numbers.png"/>)
   </code>
+  <p>
+    Let's get our examples to run with the stub.
+  </p>
   <code class="block">
     ; Stub :
     (define (place-numbers face) 0)
