Making sure up to date

--- a/index.html
+++ b/index.html
@@ -982,9 +982,7 @@
   <code class="block">
     ; Template :
     (define (place-numbers face)
-      (rotate ...
-        (foldl ... ...)
-      )
+      (... face ...)
     )
   </code>
   <code class="block">
